spacing fixes, added status icons, vote pop up fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@ html {
 			@include media(">phone", "<=tablet") {
 				width: 90%;
 				left: 5%;
+				overflow: scroll-y;
 			}
 		}
 
@@ -82,6 +83,12 @@ html {
 			margin: 5%;
 			text-align: left;
 
+		}
+
+		#vote-form {
+			background-color: #fff;
+			border: 1px solid #eee;
+			//display:none;
 		}
 
 		footer {
